# pump-chaser

./: .gitignore  .taurignore  Cargo.toml  MIGRATION.md  README.md  UPGRADE-V2.0.0.md  UPGRADE-v1.0.0.md  build.rs  requirements.txt
.github/workflows/: build-installers.yml  release.yml
config/: settings.yaml
data/models/: feature_schema.json  online_model.json  production.metrics.json  production.onnx
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs  ollama.rs
desktop/src-tauri/windows/: installer-hooks.nsh
scripts/: build_installers.ps1  build_installers.sh  build_release.ps1  build_release.sh  bump_version.sh  collect_ci_artifacts.sh  export_onnx.py  gen_update_manifest.py  prepare_release_assets.sh  setup_signing.sh  sync_version.sh
src/: app_state.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  server.rs  settings_commit.rs  user_settings.rs  version.rs
src/ai/: assistant.rs  assistant_tools.rs  decision.rs  llm_regime.rs  mod.rs
src/api/: handlers.rs  mod.rs  ws.rs
src/backtest/: mod.rs
src/charts/: mod.rs
src/db/: audit.rs  mod.rs  news.rs  pnl.rs  portfolio.rs  positions.rs  signals.rs  tuner.rs
src/exchange/: mexc.rs  mod.rs  private.rs  rest.rs  symbols.rs  types.rs  ws.rs
src/execution/: live.rs  live_monitor.rs  mod.rs  order_cleanup.rs  paper.rs  paper_fill.rs  position_sync.rs  trailing.rs
src/learning/: mod.rs  tuner.rs
src/ml/: features.rs  inference.rs  labels.rs  mod.rs  online.rs  onnx.rs
src/risk/: filters.rs  manager.rs  mod.rs
src/scanner/: mod.rs
src/sentiment/: fetcher.rs  gate.rs  mod.rs  scorer.rs  state.rs
src/signals/: ai_candidate.rs  confluence.rs  indicators.rs  liquidity_grab.rs  macro_filter.rs  mod.rs  pump.rs  scalp.rs  sniper.rs  state.rs  types.rs  zones.rs
src/utils/: alerts.rs  mod.rs  paths.rs  secrets.rs  telegram_bot.rs  time.rs
tests/: api_parity.rs  exchange_live.rs  integration_test.rs
training/: __init__.py  __main__.py  cli.py  dataset.py  download.py  experiments.py  export_onnx.py  features.py  improve.py  labels.py  meta_train.py  paths.py  registry.py  schema.py  train.py  walk_forward.py
web/: app.js  charts.js  event-labels.js  index.html  splash.html  styles.css
